--- a/src/app/beers/beers.component.css
+++ b/src/app/beers/beers.component.css
@@ -26,7 +26,7 @@
 }
 
 #beers{
-  padding-top: 15vh;
+  padding-top: 18vh;
   padding-bottom: 2vh;
 }
 
