--- a/src/app/culture/culture.component.css
+++ b/src/app/culture/culture.component.css
@@ -24,7 +24,7 @@ p{
 }
 
 #top{
-  padding-top: 15vh;
+  padding-top: 22vh;
 }
 
 #owners{
