--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,7 @@
+a{
+  color: #c0c5ce;
+}
+
 .ammo{
   font-family: military;
 }
@@ -14,7 +18,7 @@
 }
 
 .bigHeader{
-  font-size: 3em;
+  font-size: 4em;
 }
 
 .col-sm-3{
@@ -41,6 +45,7 @@
 #about img{
   width: 100%;
   height: 85%;
+  padding-bottom: 3vh;
 }
 
 #logo{
