--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -12,6 +12,10 @@
   font-weight: bold;
 }
 
+.menu{
+  padding-top: 8vh;
+}
+
 .price{
   float: right;
 }
